<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_gray"
...
        android:text="Colors"
        app:layout_constraintLeft_toLeftOf="@+id/logo"
        app:layout_constraintRight_toLeftOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/title_text"/>

    <com.captechventures.examples.espresso_recording.ui.font.FontableButton
        android:id="@+id/bt_core_values"
        style="@style/Button.Primary"
        android:layout_width="@dimen/primary_button_width"
        android:layout_marginTop="48dp"
        android:text="Core Values"
        app:layout_constraintLeft_toRightOf="@+id/logo"
        app:layout_constraintRight_toRightOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/title_text"/>

    <com.captechventures.examples.espresso_recording.ui.font.FontableButton
        android:id="@+id/bt_components"
...
