...
              android:layout_height="match_parent"
              android:background="@color/core_value_color_enthusiasm"
              android:orientation="vertical"
              android:padding="16dp">

    <com.captechventures.examples.espresso_recording.ui.font.FontableTextView
        android:id="@+id/tv_core_values_title"
        style="@style/Text.Header.Header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/core_value_enthusiasm"/>
...
