...
    <string name="toast_copied_success">Copied Hex Value to clipboard</string>
    <string name="snackbar_message_color_selected">Selected %1$s with Hex of %2$s</string>
    <string name="title_activity_core_values">Core Values</string>
    <string name="core_value_trusted_advisor">Trusted Advisor</string>
    <string name="core_value_intellectual_curiosity">Intellectual Curiosity</string>
    <string name="core_value_flexibility">Flexibility</string>
    <string name="core_value_enthusiasm">Enthusiasm</string>
    <string name="core_value_servant_leadership">Servant Leadership</string>
    <array name="array_core_values">
        <item>@string/core_value_trusted_advisor</item>
        <item>@string/core_value_intellectual_curiosity</item>
        <item>@string/core_value_flexibility</item>
        <item>@string/core_value_enthusiasm</item>
...
